idempotency-20/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-py-app
  template:
    metadata:
      labels:
        app: hello-py-app
    spec:
      containers:
      - name: hello-py
        image: dkuser2/otus-idempotency-20:v1
        ports:
        - name: web
          containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
