idempotency-20/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-py-app
spec:
  selector:
    app: hello-py-app
  ports:
    - protocol: TCP
      port: 9000
      name: web
      targetPort: web
  type: NodePort
